manage only images for fieds that w have to integrate to the doc and other small fixes

--- a/templates/common/form/download_upload_form.html
+++ b/templates/common/form/download_upload_form.html
@@ -4,7 +4,7 @@
     <span class="fr-fi-alert-line fr-mr-1w" aria-hidden="true"></span>Attention, la liste des {{ what }} téléversée écrase la liste courante.</p>
 <div class="fr-grid-row fr-grid-row--gutters fr-mx-1w">
     <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-btns-group">
-        <button type="button" class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:load_xlsx_model' convention_uuid=convention_uuid file_type=file_type %}'">
+        <button type="button" class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:load_xlsx_model' file_type=file_type %}'">
             <img class="apilos-fi-btn--secondary fr-mr-1w" src="{% static "icons/download.svg" %}">Télécharger le modèle des {{ what }} !
         </button>
     </div>
