--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -58,7 +58,7 @@
     </div>
     <script type="text/javascript">
         //        document.addEventListener("DOMContentLoaded", function() {
-        let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}');
+        let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}' {% if image_only %}, 'image/*'{% endif %});
         init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
         //        });
     </script>
