--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -49,13 +49,13 @@
                             </div>
                         </div>
 
-                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention help="Identité du vendeur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
+                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention help="Identité du vendeur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True image_only=True %}
 
-                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention help="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
+                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention help="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True  image_only=True %}
 
-                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files convention=convention textarea=True %}
+                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files convention=convention textarea=True image_only=True %}
 
-                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files convention=convention textarea=True %}
+                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files convention=convention textarea=True image_only=True %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
