--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -83,7 +83,7 @@
                                     {% include "common/display_text_and_files_if_exists.html" with label="Référence du notaire" text=programme.reference_notaire_text file_list=programme.reference_notaire_files.values %}
                                     {% include "common/display_text_and_files_if_exists.html" with label="Référence de publication de l'acte" text=programme.reference_publication_acte_text file_list=programme.reference_publication_acte_files.values %}
                                     {% include "common/display_text_and_files_if_exists.html" with label="Acte de propriété" text=programme.acte_de_propriete_text file_list=programme.acte_de_propriete_files.values %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Acte de propriété" text=programme.acte_notarial_text file_list=programme.acte_notarial_files.values %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Acte notarial" text=programme.acte_notarial_text file_list=programme.acte_notarial_files.values %}
                                 </div>
                             </div>
                         </div>
