--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -26,6 +26,23 @@
 
         {% block css_extras %}{% endblock %}
         {% block javascript_extras %}{% endblock %}
+        {% if ENVIRONMENT == 'production' %}
+            <!-- Matomo -->
+            <script>
+                var _paq = window._paq = window._paq || [];
+                /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+                _paq.push(['trackPageView']);
+                _paq.push(['enableLinkTracking']);
+                (function() {
+                    var u="https://stats.data.gouv.fr/";
+                    _paq.push(['setTrackerUrl', u+'piwik.php']);
+                    _paq.push(['setSiteId', '188']);
+                    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+                    g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+                })();
+            </script>
+            <!-- End Matomo Code -->
+        {% endif %}
     </head>
 
     <body>
