enhance mandatory star indicator and help message management, enhance error display after a dropzone error

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,3 +80,32 @@
   height:60px;
   background-color: grey;
 }
+.dz-error-message {
+  z-index: 100000 !important;
+  width:auto !important;
+  height: auto !important;
+  top:150px !important;
+  left: -60px !important;
+}
+
+.dropzone .dz-preview .dz-error-message:after {
+  left: 115px !important;
+}
+
+
+/* .dropzone .dz-preview .dz-image img {
+  margin: auto;   // center the image inside the thumbnail
+}
+.dropzone .dz-preview .dz-error-message {
+  top: 140px;     // move the tooltip below the "Remove" link
+}
+.dropzone .dz-preview .dz-error-message:after {
+  left: 30px;     // move the tooltip's arrow to the left of the "Remove" link
+  top: -18px;
+  border-bottom-width: 18px;
+}
+.dropzone .dz-preview .dz-remove {
+  margin-top: 4px;
+  font-size: 11px;
+  text-transform: uppercase;
+} */
