--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -45,7 +45,7 @@
                                     {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" mandatory=True %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" mandatory=True description="Date à laquelle le signataire a reçu le mandat lui permettant de signer la convention" %}
+                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" mandatory=True %}
                                 </div>
                             </div>
                         </div>
