--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -102,10 +102,10 @@
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">Section {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col">Numéro {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col">Lieudit {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col">Surface {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col">Section {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col">Numéro {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col">Lieudit {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col">Surface {% include "common/mandatory_field_star.html" %}</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -145,9 +145,9 @@
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">Financement {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col">Désignation {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col">Type {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col">Financement {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col">Désignation {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col">Type {% include "common/mandatory_field_star.html" %}</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -185,7 +185,7 @@
                                                     <th scope="col">Numéro</th>
                                                     <th scope="col">Date d'octroi</th>
                                                     <th scope="col">Durée (en années)</th>
-                                                    <th scope="col">Montant (en €) {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col">Montant (en €) {% include "common/mandatory_field_star.html" %}</th>
                                                     <th scope="col">Préteur</th>
                                                     <th scope="col">Préciser le prêteur si 'Autre'</th>
                                                 </tr>
@@ -232,15 +232,15 @@
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col" style='min-width:200px;'>Désignation {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:150px;'>Type {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Surface habitable {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Surface des annexes réelle {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Surface des annexes retenue dans la SU {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Surface Utile {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m² de surface utile {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Coefficient propre au logement {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col" style='min-width:200px;'>Désignation {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:150px;'>Type {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Surface habitable {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Surface des annexes réelle {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Surface des annexes retenue dans la SU {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Surface Utile {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m² de surface utile {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Coefficient propre au logement {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field_star.html" %}</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -313,12 +313,12 @@
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col" style='min-width:150px;'>Type d'annexe {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:200px;'>Désignation des logements {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:150px;'>Typologie des logements {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Surface de l'annexe {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Loyer unitaire en € {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col" style='min-width:150px;'>Type d'annexe {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:200px;'>Désignation des logements {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:150px;'>Typologie des logements {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Surface de l'annexe {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Loyer unitaire en € {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field_star.html" %}</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -361,9 +361,9 @@
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col" style='min-width:150px;'>Type de stationnement {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:200px;'>Nombre de staionnements {% include "common/mandatory_field.html" %}</th>
-                                                    <th scope="col" style='min-width:150px;'>Loyer maximum en € {% include "common/mandatory_field.html" %}</th>
+                                                    <th scope="col" style='min-width:150px;'>Type de stationnement {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:200px;'>Nombre de staionnements {% include "common/mandatory_field_star.html" %}</th>
+                                                    <th scope="col" style='min-width:150px;'>Loyer maximum en € {% include "common/mandatory_field_star.html" %}</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
