--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -22,7 +22,8 @@
 
         <!--Css-->
 
-        <link rel="stylesheet" href="{% static "dsfr/css/dsfr.min.css" %}">        <link rel="stylesheet" href="{% static "css/main.css" %}">
+        <link rel="stylesheet" href="{% static "dsfr/css/dsfr.min.css" %}">
+        <link rel="stylesheet" href="{% static "css/main.css" %}">
 
         {% block css_extras %}{% endblock %}
         {% block javascript_extras %}{% endblock %}
