--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -8,12 +8,8 @@
         {% endif %}
         <label class="fr-label fr-mt-1w fr-mb-2w fr-h5" for="{{form_input.id_for_label}}">
             {{ label }}
-            {% if mandatory %}
-                {% include "common/mandatory_field.html" %}
-            {% endif %}
-            {% if help %}
-                {% include "common/help_field.html" with form_input=form.acquereur description="{{ help }}" %}
-            {% endif %}
+            {% include "common/mandatory_field.html" with form_input=form_input %}
+            {% include "common/help_field.html" with form_input=form_input %}
         </label>
 
         {% if textarea %}
@@ -39,7 +35,7 @@
             <button type="button" class="fr-btn fr-mb-1w" onclick="document.getElementById('{{form_input_files.id_for_label}}_dropzone').click()">
                 <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image
             </button>
-            {% include "common/help_field.html" with id="{{form_input.id_for_label}}_description" description="Les fichiers images et pdf sont acceptés dans la limite de 100 Mo" %}
+            {% include "common/help_field.html" with form_input=form_input_files %}
 
         </div>
 
@@ -55,6 +51,7 @@
             id="{{form_input_files.id_for_label}}"
             name="{{form_input_files.html_name}}"
             value="{{form_input_files.value }}" />
+        <div id="{{form_input_files.id_for_label}}_errors"></div>
     </div>
     <script type="text/javascript">
         //        document.addEventListener("DOMContentLoaded", function() {
