--- a/templates/common/help_field.html
+++ b/templates/common/help_field.html
@@ -1,8 +1,4 @@
-{% if id %}
-    &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line" style="min-height: 0; padding: .1rem;" type='button' onclick="toggle('{{id}}')"></button>
-    <span class="fr-hint-text" id="{{id}}" style="display:none;">{{description}}</span>
-{% else %}
+{% if form_input.help_text %}
     &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line" style="min-height: 0; padding: .1rem;" type='button' onclick="toggle('{{form_input.id_for_label}}_description')"></button>
-    <span class="fr-hint-text" id="{{form_input.id_for_label}}_description" style="display:none;">{{description}}</span>
+    <span class="fr-hint-text" id="{{form_input.id_for_label}}_description" style="display:none;">{{form_input.help_text}}</span>
 {% endif %}
-
