--- a/templates/common/mandatory_field.html
+++ b/templates/common/mandatory_field.html
@@ -1,1 +1,3 @@
-<span class="warning-notification" title="(obligatoire)">*</span>
+{% if form_input.field.required %}
+    &nbsp;{% include "common/mandatory_field_star.html" %}
+{% endif %}
