--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -49,9 +49,9 @@
                             </div>
                         </div>
 
-                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention help="Identité du vendeur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True image_only=True %}
+                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention textarea=True mandatory=True image_only=True %}
 
-                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention help="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True  image_only=True %}
+                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention textarea=True mandatory=True  image_only=True %}
 
                         {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files convention=convention textarea=True image_only=True %}
 
@@ -94,10 +94,10 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        <th scope="col">Section {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
-                                        <th scope="col">Numéro {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
-                                        <th scope="col">Lieudit {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
-                                        <th scope="col">Surface {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col">Section {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Numéro {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Lieudit {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Surface {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
