--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -59,9 +59,9 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
-                                        <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
-                                        <th scope="col">Type {% if formset.total_form_count %}{% include "common/mandatory_field.html" %}{% endif %}</th>
+                                        <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col">Type {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
