--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -12,7 +12,7 @@
                         <p class="fr-mb-3w">
                             <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
                                 <label class="fr-label" for="{{form.lot_uuid.id_for_label}}">
-                                    Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" %}
+                                    Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" with form_input=form.lot_uuid %}
                                 </label>
                                 <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid">
                                     <option value="" selected disabled hidden>Selectionnez une option</option>
