--- a/static/css/main.css
+++ b/static/css/main.css
@@ -92,6 +92,11 @@
   left: 115px !important;
 }
 
+textarea.fr-input:disabled, textarea.fr-input[disabled] {
+  color: var(--g600-g400);
+  box-shadow: inset 0 -2px 0 0 var(--g400);
+  opacity: 1;
+}
 
 /* .dropzone .dz-preview .dz-image img {
   margin: auto;   // center the image inside the thumbnail
