--- a/templates/common/form/input_date.html
+++ b/templates/common/form/input_date.html
@@ -12,7 +12,8 @@
             type="date"
             id="{{form_input.id_for_label}}"
             name="{{form_input.html_name}}"
-            value="{{ form_input.value }}">
+            value="{{ form_input.value }}"
+            {% if not editable %}disabled{% endif %}>
     </div>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
