--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -10,7 +10,8 @@
         aria-describedby="text-input-error-desc-error"
         type="text" id="{{form_input.id_for_label}}"
         name="{{form_input.html_name}}"
-        value="{{ form_input.value|default_if_none:'' }}">
+        value="{{ form_input.value|default_if_none:'' }}"
+        {% if not editable %}disabled{% endif %}>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
             {{ error }}
