--- a/templates/common/form/input_textarea.html
+++ b/templates/common/form/input_textarea.html
@@ -4,7 +4,10 @@
     type="text"
     id="{{form_input.id_for_label}}"
     name="{{form_input.html_name}}"
-    rows="{% if rows %}{{rows}}{% else %}3{% endif %}">{{ form_input.value|default_if_none:'' }}</textarea>
+    rows="{% if rows %}{{rows}}{% else %}3{% endif %}"
+    {% if not editable %}disabled{% endif %}>
+    {{ form_input.value|default_if_none:'' }}
+</textarea>
 {% for error in form_input.errors %}
     <p id="text-input-error-desc-error" class="fr-error-text">
         {{ error }}
