--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -19,7 +19,8 @@
                 type="text"
                 id="{{form_input.id_for_label}}"
                 name="{{form_input.html_name}}"
-                rows="{% if rows %}{{rows}}{% else %}8{% endif %}">{{ form_input.value }}</textarea>
+                rows="{% if rows %}{{rows}}{% else %}8{% endif %}"
+                {% if not editable %}disabled{% endif %}>{{ form_input.value }}</textarea>
         {% endif %}
 
 
@@ -28,37 +29,46 @@
             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
         {% endif %}
 
-        <div class="fr-mt-1w">
-            {% if textarea %}
-                <i class="fr-text--sm">et/ou </i>
-            {% endif %}
-            <button type="button" class="fr-btn fr-mb-1w" onclick="document.getElementById('{{form_input_files.id_for_label}}_dropzone').click()">
-                <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image
-            </button>
-            {% include "common/help_field.html" with form_input=form_input_files %}
 
-        </div>
-
-        <div class="fr-col-12 dropzone dz" id="{{form_input_files.id_for_label}}_dropzone">
-            <div class="fallback">
-                Votre navigateur ne permet pas de téléverser des documents.
-                Nous vous conseillons de modifier vos paramètres concernant
-                l'application des scripts javascript ou d'utiliser un autre navigateur.
+        {% if editable %}
+            <div class="fr-mt-1w">
+                {% if textarea %}
+                    <i class="fr-text--sm">et/ou </i>
+                {% endif %}
+                <button type="button" class="fr-btn fr-mb-1w" onclick="document.getElementById('{{form_input_files.id_for_label}}_dropzone').click()">
+                    <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image
+                </button>
+                {% include "common/help_field.html" with form_input=form_input_files %}
             </div>
-        </div>
-        <input hidden
-            type="hidden"
-            id="{{form_input_files.id_for_label}}"
-            name="{{form_input_files.html_name}}"
-            value="{{form_input_files.value }}" />
-        <div id="{{form_input_files.id_for_label}}_errors"></div>
+            <div
+                class="fr-col-12 dropzone dz"
+                id="{{form_input_files.id_for_label}}_dropzone">
+                <div class="fallback">
+                    Votre navigateur ne permet pas de téléverser des documents.
+                    Nous vous conseillons de modifier vos paramètres concernant
+                    l'application des scripts javascript ou d'utiliser un autre navigateur.
+                </div>
+            </div>
+            <input hidden
+                type="hidden"
+                id="{{form_input_files.id_for_label}}"
+                name="{{form_input_files.html_name}}"
+                value="{{form_input_files.value}}" />
+            <div id="{{form_input_files.id_for_label}}_errors"></div>
+            <script type="text/javascript">
+                //        document.addEventListener("DOMContentLoaded", function() {
+                let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}' {% if image_only %}, 'image/*'{% endif %});
+                init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
+                //        });
+            </script>
+
+        {% else %}
+            <div class="fr-mt-6w">
+                {% include "common/display_files.html" with file_list=file_list %}
+            </div>
+        {% endif %}
+
     </div>
-    <script type="text/javascript">
-        //        document.addEventListener("DOMContentLoaded", function() {
-        let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}' {% if image_only %}, 'image/*'{% endif %});
-        init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
-        //        });
-    </script>
 
 
     {% if textarea and not verticalDisplay %}
