--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -10,9 +10,7 @@
                         <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Identité du signataire</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
-
                         {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" mandatory=True %}
-
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
@@ -49,12 +47,15 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="form-button-footer fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
-                    {% include "common/button/precedent.html" with precedent='conventions:selection_update' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:bailleur' convention_uuid=convention.uuid %}
+                    {% include "common/button/previous.html" with precedent='conventions:selection_update' convention_uuid=convention.uuid %}
+                    {% if editable %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:bailleur' convention_uuid=convention.uuid editable=editable %}
+                    {% else %}
+                        {% include "common/button/next.html" with suivant='conventions:programme' convention_uuid=convention.uuid %}
+                    {% endif %}
                 </div>
             </form>
         </div>
