--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -49,21 +49,21 @@
                             </div>
                         </div>
 
-                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention textarea=True mandatory=True image_only=True %}
+                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention textarea=True image_only=True file_list=convention.programme.vendeur_files.values %}
 
-                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention textarea=True mandatory=True  image_only=True %}
+                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention textarea=True image_only=True file_list=convention.programme.acquereur_files.values %}
 
-                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files convention=convention textarea=True image_only=True %}
+                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files convention=convention textarea=True image_only=True file_list=convention.programme.reference_notaire_files.values %}
 
-                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files convention=convention textarea=True image_only=True %}
+                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files convention=convention textarea=True image_only=True file_list=convention.programme.reference_publication_acte_files.values %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete form_input_files=form.acte_de_propriete_files convention=convention %}
+                                    {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete form_input_files=form.acte_de_propriete_files convention=convention file_list=convention.programme.acte_de_propriete_files.values %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial form_input_files=form.acte_notarial_files  convention=convention %}
+                                    {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial form_input_files=form.acte_notarial_files  convention=convention file_list=convention.programme.acte_notarial_files.values %}
                                 </div>
                             </div>
                         </div>
@@ -73,9 +73,10 @@
 
                         <h4>Références cadastrales</h4>
 
-                        {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='cadastre' upform=upform  what="références cadastrales"%}
-
-                        <hr class="fr-col-12 fr-my-3w">
+                        {% if editable %}
+                            {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='cadastre' upform=upform  what="références cadastrales"%}
+                            <hr class="fr-col-12 fr-my-3w">
+                        {% endif %}
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
@@ -128,8 +129,12 @@
                 </div>
 
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w button-bar">
-                    {% include "common/button/precedent.html" with precedent='conventions:programme' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:cadastre' convention_uuid=convention.uuid %}
+                    {% include "common/button/previous.html" with precedent='conventions:programme' convention_uuid=convention.uuid %}
+                    {% if editable %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:cadastre' convention_uuid=convention.uuid editable=editable %}
+                    {% else %}
+                        {% include "common/button/next.html" with suivant='conventions:edd' convention_uuid=convention.uuid %}
+                    {% endif %}
                 </div>
 
 
