--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -25,13 +25,17 @@
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
 
-                        {% include "common/form/input_upload.html" with label="Ajoutez vos commentaires à l'attention de l'instructeur" form_input=form.comments form_input_files=form.comments_files convention=convention textarea=True verticalDisplay=True %}
+                        {% include "common/form/input_upload.html" with label="Ajoutez vos commentaires à l'attention de l'instructeur" form_input=form.comments form_input_files=form.comments_files convention=convention file_list=convention.comments_files.values textarea=True verticalDisplay=True %}
 
                     </div>
                 </div>
                 <div class="form-button-footer fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
-                    {% include "common/button/precedent.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:comments' convention_uuid=convention.uuid %}
+                    {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
+                    {% if editable %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid editable=editable %}
+                    {% else %}
+                        {% include "common/button/next.html" with suivant='conventions:recapitulatif' convention_uuid=convention.uuid %}
+                    {% endif %}
                 </div>
             </form>
         </div>
