--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -28,19 +28,20 @@
                             et donc plusieurs conventions. Il existe 2 types d’EDD: EDD simplifié & EDD volumétrique
                         </p>
 
-                        {% include "common/form/input_upload.html" with label="EDD volumétrique" form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files convention=convention textarea=True image_only=True %}
+                        {% include "common/form/input_upload.html" with label="EDD volumétrique" form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files convention=convention textarea=True image_only=True file_list=convention.programme.edd_volumetrique_files.values %}
 
                         {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique label="Mention de publication de l'EDD volumétrique" %}
 
-                        {% include "common/form/input_upload.html" with label="EDD classique" form_input=form.edd_classique form_input_files=form.edd_classique_files convention=convention textarea=True image_only=True %}
+                        {% include "common/form/input_upload.html" with label="EDD classique" form_input=form.edd_classique form_input_files=form.edd_classique_files convention=convention textarea=True image_only=True file_list=convention.programme.edd_classique_files.values %}
 
                         {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique label="Mention de publication de l'EDD classique" %}
 
                         <h4 class="fr-mb-1w">EDD Simplifé</h4>
 
-                        {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='logements_edd' upform=upform  what="logements pour l'EDD simplifié"%}
-
-                        <hr class="fr-col-12 fr-my-3w">
+                        {% if editable %}
+                            {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='logements_edd' upform=upform  what="logements pour l'EDD simplifié"%}
+                            <hr class="fr-col-12 fr-my-3w">
+                        {% endif %}
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
@@ -71,7 +72,8 @@
                                                 <select
                                                     class="fr-select {% if form.financement.errors %}fr-select--error{% endif %}"
                                                     id="{{form.financement.id_for_label}}"
-                                                    name="{{form.financement.html_name}}">
+                                                    name="{{form.financement.html_name}}"
+                                                    {% if not editable %}disabled{% endif %}>
                                                     <option value="" {% if not form.financement.value %}selected{% endif %} disabled hidden></option>
                                                     {% for financement in financements %}
                                                         <option value="{{financement.value}}"
@@ -93,7 +95,8 @@
                                                 <select
                                                     class="fr-select {% if form.typologie.errors %}fr-select--error{% endif %}"
                                                     id="{{form.typologie.id_for_label}}"
-                                                    name="{{form.typologie.html_name}}">
+                                                    name="{{form.typologie.html_name}}"
+                                                    {% if not editable %}disabled{% endif %}>
                                                     <option value="" {% if not form.typologie.value %}selected{% endif %} disabled hidden></option>
                                                     {% for typologie in typologies %}
                                                         <option value="{{typologie.value}}"
@@ -117,8 +120,12 @@
                 </div>
 
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w button-bar">
-                    {% include "common/button/precedent.html" with precedent='conventions:cadastre' convention_uuid=convention.uuid %}
-                    {% include "common/button/suivant.html" with suivant='conventions:edd' convention_uuid=convention.uuid %}
+                    {% include "common/button/previous.html" with precedent='conventions:cadastre' convention_uuid=convention.uuid %}
+                    {% if editable %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:edd' convention_uuid=convention.uuid editable=editable %}
+                    {% else %}
+                        {% include "common/button/next.html" with suivant='conventions:prets' convention_uuid=convention.uuid %}
+                    {% endif %}
                 </div>
 
 
