--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -10,11 +10,11 @@
                         <h2 class="fr-mb-3w">Etape {{convention_form_step}}/{{ nb_steps }} - Choix du programme à conventionner</h2>
                         {% include "common/mandatory_fields_info.html" %}
                         <p class="fr-mb-3w">
-                            <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
+                            <div class="fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}">
                                 <label class="fr-label" for="{{form.lot_uuid.id_for_label}}">
                                     Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" with form_input=form.lot_uuid %}
                                 </label>
-                                <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid">
+                                <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
                                     <option value="" selected disabled hidden>Selectionnez une option</option>
                                     {% for lot in programmes %}
                                         <option
@@ -38,7 +38,15 @@
                     <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
                         Revenir à l'étape précédente
                     </a>
-                    {% include "common/button/suivant_submit.html" with suivant='conventions:bailleur' %}
+                    {% if editable %}
+                        {% if convention_uuid %}
+                            {% include "common/button/next_and_save.html" with suivant='conventions:selection_update' convention_uuid=convention_uuid %}
+                        {% else %}
+                            {% include "common/button/next_and_save.html" with suivant='conventions:selection' %}
+                        {% endif %}
+                    {% else %}
+                        {% include "common/button/next.html" with suivant='conventions:bailleur' convention_uuid=convention_uuid %}
+                    {% endif %}
                 </div>
             </form>
         </div>
